2011-05-26  Ryosuke Niwa  <rniwa@webkit.org>

Reviewed by Eric Seidel.

        [debug feature] WTFString should have show() method
        https://bugs.webkit.org/show_bug.cgi?id=61149

        Added String::show and AtomicString::show in NDEBUG.

        * wtf/text/AtomicString.cpp:
        (WTF::AtomicString::show):
        * wtf/text/AtomicString.h:
        * wtf/text/WTFString.cpp:
        (String::show):
        * wtf/text/WTFString.h:


git-svn-id: svn://svn.chromium.org/blink/trunk@87438 bbb929c8-8fbe-4397-9dbb-9b2b20218538