third_party/WebKit/Source/JavaScriptCore/wtf/text/AtomicString.cpp
@@ -366,4 +366,11 @@ AtomicString AtomicString::fromUTF8Internal(const char* charactersStart, const c
     return atomicString;
 }
 
+#ifndef NDEBUG
+void AtomicString::show()
+{
+    m_string.show();
+}
+#endif
+
 } // namespace WTF
