third_party/WebKit/Source/JavaScriptCore/wtf/text/AtomicString.h
@@ -114,6 +114,9 @@ public:
     static AtomicString fromUTF8(const char*, size_t);
     static AtomicString fromUTF8(const char*);
 
+#ifndef NDEBUG
+    void show();
+#endif
 private:
     String m_string;
     
